# actor12

./: .bazelrc  .gitignore  BUILD.bazel  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  MODULE.bazel  README.md  justfile
.github/workflows/: docs.yml
benches/: overhead.rs
docs/: TODO.md  astro.config.mjs  link_api_analysis.md  link_api_poc.rs  package-lock.json  package.json  package.json.save
docs/src/content/docs/: index.mdx  installation.md  introduction.md  quick-start.md
docs/src/content/docs/api/: two-step.md
docs/src/content/docs/concepts/: actors.md  messages.md
docs/src/content/docs/examples/: counter.md
docs/src/content/docs/migration/: from-old-api.md
examples/: BUILD.bazel  api_coverage_test.rs  bank_account.rs  basic_actor.rs  dynamic_dispatch.rs  echo_server.rs  handler_pattern.rs  new_api_demo.rs  ping_pong.rs  simple_counter.rs  worker_pool.rs
src/: actor.rs  cancel.rs  channel.rs  count.rs  drop.rs  envelope.rs  error.rs  handler.rs  lib.rs  link.rs  message.rs  multi.rs  proxy.rs  weak.rs
tests/: BUILD.bazel  async_reply.rs  dynmsg.rs  integration_tests.rs  regular.rs
